# GAMES202

./: .gitignore  README.md
homework0/: index.html
homework0/lib/: dat.gui.js  imgui.umd.js  imgui_impl.umd.js
homework0/src/loads/: loadOBJ.js
homework0/src/materials/: Material.js  PhongMaterial.js
homework0/src/objects/: Mesh.js
homework0/src/shaders/: InternalShader.js  Shader.js
homework1/src/: engine.js
homework1/src/lights/: DirectionalLight.js  Light.js  PointLight.js
homework1/src/loads/: loadOBJ.js  loadShader.js
homework1/src/materials/: PhongMaterial.js  ShadowMaterial.js
homework1/src/objects/: Mesh.js
homework1/src/renderers/: MeshRender.js  WebGLRenderer.js
homework1/src/shaders/: InternalShader.js  Shader.js
homework1/src/textures/: FBO.js  Texture.js
homework2/frontend/: index.html
homework2/frontend/src/: engine.js
homework2/prt/: CMakeLists.txt
homework2/prt/scenes/: prt_cornell.exr
homework2/prt/src/: accel.cpp  bitmap.cpp  block.cpp  chi2test.cpp  common.cpp  dielectric.cpp  diffuse.cpp  gui.cpp  independent.cpp  main.cpp  mesh.cpp  microfacet.cpp  mirror.cpp  obj.cpp  object.cpp  parser.cpp  perspective.cpp  proplist.cpp  prt.cpp  rfilter.cpp  scene.cpp  ttest.cpp  warp.cpp  warptest.cpp
homework3/src/: engine.js
homework4/lut-gen/: CMakeLists.txt  Eavg_IS.cpp  Eavg_MC.cpp  Emu_IS.cpp  Emu_MC.cpp  test.sh
homework5/: .gitignore  CMakeLists.txt  image2video.sh
homework5/src/: .clang-format  denoiser.cpp  denoiser.h  main.cpp
homework5/src/util/: image.cpp  imageutil.cpp  mathutil.cpp  mathutil.h
(+66 files in other folders)
